--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "uniswap-v3-subgraph",
+  "name": "anyswap-v3-subgraph",
   "version": "1.0.0",
   "repository": "https://github.com/graphprotocol/uniswap-v3-subgraph",
   "license": "GPL-3.0-or-later",
